# car-steering

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile_new  LICENSE  README.md  code-of-conduct.md  loop-recordings.sh  run-decoder.sh  run-group13.sh  run-vehicle-view.sh  run.sh
.gitlab/issue_templates/: BUG.md
analyser/: Dockerfile
analyser/src/: analyser.py  mergeCSV.py
csv/: reports.csv
sele/: Dockerfile
sele/src/: sele.py
source/: CMakeLists.txt
source/cmake/: CodeCoverage.cmake
source/src/: CsvManager.cpp  CsvManager.hpp  ImageCropper.cpp  ImageCropper.hpp  ImageFilter.cpp  ImageFilter.hpp  ImageSaver.cpp  ImageSaver.hpp  ImageTracker.cpp  ImageTracker.hpp  cyberGroup13.cpp
source/test/: TestImageCropper.cpp  TestImageFilter.cpp
src/: CMakeLists.txt  Dockerfile  ImageCropper.cpp  ImageCropper.hpp  ImageFilter.hpp  ImageTracker.hpp  PrimeChecker.cpp  TestPrimeChecker.cpp  cyberGroup13.cpp  helloworld.cpp  runner
src/helloworld/: CMakeLists.txt  TestPrimeChecker.cpp
src/image-cropping/: CMakeLists.txt  ImageCropper.cpp  ImageCropper.hpp  ImageFilter.cpp  ImageFilter.hpp  ImageTracker.cpp  ImageTracker.hpp  TestImageCropper.cpp  template-opencv.cpp
src/image-cropping/test/: TestImageCropper.cpp
